<resources>
    <string name="app_name">Masjid</string>
    <string name="masjid_terdekat">Masjid Terdekat</string>
    <string name="cari_masjid">Cari Masjid</string>
    <string name="title_activity_near_mosque_maps">Map</string>
    <string name="pilih_kabupaten">Pilih Kabupaten</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="pilih_lokasi">Pilih Lokasi</string>
    <string name="tidak_ada_masjid_terdaftar">Tidak ada masjid untuk ditampilkan!</string>
    <string name="mencari_lokasi">Mencari lokasi</string>
    <string name="lokasi_tidak_ditemukan">Lokasi tidak ditemukan.</string>
    <string name="gagal_hitung_jarak">Gagal menghitung jarak</string>
    <string name="login">Login</string>
    <string name="pilih_titik_lokasi_masjid">Pilih titik lokasi masjid</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="edit_data_masjid">Edit Data Masjid</string>
    <string name="tambah_data_masjid">Tambah Data Masjid</string>
    <string name="lampung">Lampung</string>
    <string name="lokasi_diluar_lampung">Titik harus berada di Provinsi Lampung!</string>

    <string name="nama_masjid">Nama Masjid</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="alamat">Alamat</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="subdistrict">subDistrict</string>
    <string name="kabupaten_kota">Kabupaten/Kota</string>
    <string name="kabupaten_kota_">Kabupaten_Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="negara">Negara</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="daftar_masjid">Daftar Masjid</string>
    <string name="tidak_ada_masjid">Tidak ada masjid terdaftar!</string>
    <string name="data_kosong">Data kosong</string>
    <string name="tambah_fasilitas">Tambah Fasilitas</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="info_kotak_amal">Info Kotak Amal</string>
    <string name="sejarah">Sejarah</string>
    <string name="sub_district">subDistrict</string>

    <string name="submit">Submit</string>
    <string name="harus_diisi">Harus diisi!</string>
    <string name="masjid">Masjid</string>
    <string name="gagal_mendapatkan_lokasi">Gagal mendapatkan lokasi!</string>
    <string name="pilih_lokasi_masjid">Pilih lokasi masjid</string>
    <string name="berhasil_ditambahkan">Berhasil ditambahkan</string>
    <string name="gagal_menambahkan">Gagal menambahkan data</string>
    <string name="daftar">Daftar</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="not_support">Tidak didukung oleh perangkat anda!</string>
    <string name="login_berhasil">Login Berhasil</string>
    <string name="versi">versi </string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_pin_point_maps">MapPin</string>
    <string name="maps">Maps</string>
    <string name="title_activity_search_maps">Map</string>
    <string name="ganti_lokasi_maps">Ganti Lokasi Maps</string>
    <string name="title_activity_edit_maps">Map</string>
    <string name="arah_kiblat">Arah Kiblat</string>
    <string name="panel_admin">Panel Admin</string>
    <string name="tentang">Tentang</string>
    <string name="bantuan">Bantuan</string>
    <string name="detail_masjid">Detail Masjid</string>
</resources>