<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mn_login"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/login"
        android:contentDescription="@string/login"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mn_help"
        android:icon="@drawable/ic_baseline_help_24"
        android:contentDescription="@string/bantuan"
        android:title="@string/bantuan"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mn_about"
        android:icon="@drawable/ic_baseline_error_24"
        android:contentDescription="@string/tentang"
        android:title="@string/tentang"
        app:showAsAction="never"/>

</menu>