<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search_mosque.DetailSearchMosqueActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_mosque"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="center"
                android:src="@drawable/ic_baseline_cached_100"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_mosque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama_masjid"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_name_mosque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/deskripsi"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_fasilitas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fasilitas"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_fasilitas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_kegiatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kegiatan"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_kegiatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_info_kotak_amal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/info_kotak_amal"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_info_kotak_amal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_sejarah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sejarah"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_sejarah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_sub_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kecamatan"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_sub_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kabupaten_kota"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/provinsi"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/negara"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_postal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kode_pos"
                android:layout_marginTop="@dimen/textfield_margin"
                android:layout_marginBottom="@dimen/textfield_margin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>